# elaine

./: CHANGELOG.md  Cargo.toml  README.md
.github/.github/workflows/: build.yml
.github/workflows/: build.yml
benches/: recognize.rs
examples/: simple.rs
src/: head.rs  lib.rs  recognize.rs
tests/: recognize.rs
tests/helpers/: mod.rs
